--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./styles/custom.css">
-
-    <title>Document</title>
+    <link rel="shortcut icon" href="./logo.ico" type="image/x-icon">
+    <title>Work Tool | @santyaragon</title>
 </head>
 
 <body>
@@ -34,32 +34,6 @@
                 <i @click="eliminarMensaje(mensaje)" class="bi bi-trash3 delete-icon"></i>
             </div>
         </section>
-
-        <!-- 
-        <div class="modal fade" id="editForm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="d-flex flex-column">
-                                <label>Title</label>
-                                <input id="tituloEditado" type="text" :value="mensajeCapturado.titulo" required>
-                                <label>Content</label>
-                                <input id="mensajeEditado" type="text" :value="mensajeCapturado.mensaje" required>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-success" @click="editarMensaje()">Edit</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
     </div>
 
